# DragonAggregator

./: .dragonaggregator.example.yaml  .dragonaggregator.yaml  .gitignore  README.md  config.yaml  docker-compose.yml  dragonaggregator.spec  pyproject.toml
.github/workflows/: pre-release-ubuntu.yml
DragonAggregator/: __main__.py  cli.py  db.py  models.py
DragonAggregator/connector/: Generic.py  Gitleaks.py  Sonarqube.py  Veracode.py
DragonAggregator/enum/: ScanTool.py  ScanType.py
DragonAggregator/test/: testGitleaks.py  testSonarqube.py
data/sample-api/gitleaks/: juiceshop.json
data/sample-api/sonarqube/: vulnado.json
data/sample-api/veracode/: juiceshop.json
research/: SARIF.md
scripts/: generate-exe.sh  setup.sh  test-cicd.sh
